kube_pra/10-kube-ingress/ingress-service/ingress-context-based-service.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: ingress-crs
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - http: 
        paths: 
          - path: /app1
            pathType: Prefix 
            backend: 
              service: 
                name: app1-nginx-clusterip-service 
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix 
            backend: 
              service: 
                name: app2-nginx-clusterip-service 
                port:
                  number: 80
